--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoesdb
 spring.datasource.username=simplilearn
 spring.datasource.password=simplilearn@2020
+spring.jpa.show-sql=true
