--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoesdb
 spring.datasource.username=simplilearn
 spring.datasource.password=simplilearn@2020
 spring.jpa.show-sql=true
+#---------------------------------
+#sportyshoes.queries.users-query=select email, password, '1' as enabled from auth_user where email=? and status='VERIFIED' 
+#sportyshoes.queries.roles-query=select u.email, r.role_name from auth_user u inner join auth_user_role ur on(u.auth_user_id=ur.auth_user_id) inner join auth_role r on(ur.auth_role_id=r.auth_role_id) where u.email=?
