Shopme is the web portal for sporty shoes.

--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.sportyshoesweb</groupId>
-	<artifactId>SportyShoesWeb</artifactId>
+	<groupId>com.Shopme</groupId>
+	<artifactId>Shopme</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>SportyShoesWeb</name>
+	<name>Shopme</name>
 	<description>Web project for sporty shoes</description>
 
 	<properties>
